fix spacing real this time

--- a/src/style.css
+++ b/src/style.css
@@ -107,7 +107,7 @@ h1, h2, h3, h4, h5, h6, p, li, ul, a {
     padding: 0px;
 }
 
-p ul:not(:has(ul)) {
+p, ul:not(:has(ul)) {
     margin-bottom: 0.75rem !important;
 }
 
